added doorbell contact widget

--- a/public/index.html
+++ b/public/index.html
@@ -28,5 +28,50 @@
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
+    <script type="text/javascript">
+      window.doorbellOptions = {
+        strings: {
+          "feedback-button-text": "Contact Us",
+          title: "Contact Us",
+          "feedback-textarea-placeholder": "Please write us a message here..."
+        },
+        id: "11216",
+        appKey:
+          "o0fUAl2M29YGaGTAlUxeZUU0GBXqsmMWUIuL5copCoJA79mGnVs7RIYdhoaxF7xd"
+      };
+      (function(w, d, t) {
+        var hasLoaded = false;
+        function l() {
+          if (hasLoaded) {
+            return;
+          }
+          hasLoaded = true;
+          window.doorbellOptions.windowLoaded = true;
+          var g = d.createElement(t);
+          g.id = "doorbellScript";
+          g.type = "text/javascript";
+          g.async = true;
+          g.src =
+            "https://embed.doorbell.io/button/" +
+            window.doorbellOptions["id"] +
+            "?t=" +
+            new Date().getTime();
+          (
+            d.getElementsByTagName("head")[0] ||
+            d.getElementsByTagName("body")[0]
+          ).appendChild(g);
+        }
+        if (w.attachEvent) {
+          w.attachEvent("onload", l);
+        } else if (w.addEventListener) {
+          w.addEventListener("load", l, false);
+        } else {
+          l();
+        }
+        if (d.readyState == "complete") {
+          l();
+        }
+      })(window, document, "script");
+    </script>
   </body>
 </html>
