--- a/public/index.html
+++ b/public/index.html
@@ -20,7 +20,11 @@
       href="https://fonts.googleapis.com/css?family=Amatic+SC:700&display=swap"
       rel="stylesheet"
     />
-
+    <style>
+      #doorbell-button {
+        background-color: #117BB8;
+      }
+    </style>
     <title>
       Green Mountain Gear | Functional outdoor gear for the northeast
     </title>
