--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta name="Green Mountain Gear" content="Green Mountain Gear" />
+    <meta name="Description" content="Green Mountain Gear" />
     <link
       href="https://fonts.googleapis.com/css?family=Fjalla+One&display=swap"
       rel="stylesheet"
@@ -22,7 +22,7 @@
     />
     <style>
       #doorbell-button {
-        background-color: #117BB8;
+        background-color: #117bb8;
       }
     </style>
     <title>
